<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/one_title"
        layout="@layout/layout_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_title_height"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/coloryellow"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <Button
            android:id="@+id/btn_search"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="#ff6600"
            android:text="提交"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_search"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toLeftOf="@+id/btn_search"
            android:background="@color/color_white"
            android:digits="1234567890"
            android:hint="请输入订单编号"
            android:inputType="number"
            android:lines="1"
            android:maxLength="20"
            android:paddingLeft="35dp"
            android:textColor="@color/title_color_three"
            android:textColorHint="#d1d1d1" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:src="@drawable/ic_search" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="center"
            android:text="@string/goodsnumber"
            android:textColor="@color/goods_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/applytime"
            android:textColor="@color/goods_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/operation"
            android:textColor="@color/goods_text" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/goods_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

</LinearLayout>
