<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_bottom_height"
    android:background="@color/color_white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/Black_transparent_black_percent_5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/bt_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_white">

            <ImageView
                android:id="@+id/ic_one"
                android:layout_width="@dimen/bottom_img_size"
                android:layout_height="@dimen/bottom_img_size"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4.5dp"
                android:src="@drawable/ic_one_click" />

            <TextView
                android:id="@+id/tv_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ic_one"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="@string/bottom_name_one"
                android:textColor="@color/bottom_text_click"
                android:textSize="@dimen/bottom_text_size" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/bt_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_white">

            <ImageView
                android:id="@+id/ic_two"
                android:layout_width="@dimen/bottom_img_size"
                android:layout_height="@dimen/bottom_img_size"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4.5dp"
                android:src="@drawable/ic_two_normal" />

            <TextView
                android:id="@+id/tv_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ic_two"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="@string/bottom_name_two"
                android:textColor="@color/bottom_text_normal"
                android:textSize="@dimen/bottom_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bt_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_white">

            <ImageView
                android:id="@+id/ic_three"
                android:layout_width="@dimen/bottom_img_size"
                android:layout_height="@dimen/bottom_img_size"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4.5dp"
                android:src="@drawable/ic_three_normal" />

            <TextView
                android:id="@+id/tv_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ic_three"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="@string/bottom_name_three"
                android:textColor="@color/bottom_text_normal"
                android:textSize="@dimen/bottom_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bt_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_white">

            <ImageView
                android:id="@+id/ic_four"
                android:layout_width="@dimen/bottom_img_size"
                android:layout_height="@dimen/bottom_img_size"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4.5dp"
                android:src="@drawable/ic_four_normal" />

            <TextView
                android:id="@+id/tv_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ic_four"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="@string/bottom_name_four"
                android:textColor="@color/bottom_text_normal"
                android:textSize="@dimen/bottom_text_size" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>