<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_top" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="5dp"
                android:text="+86"
                android:textColor="@color/color_white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/input_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_editview_shape"
                android:hint="@string/register_phoneNumber"
                android:inputType="number"
                android:maxLength="11"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:textColor="@color/color_white"
                android:textColorHint="@color/colorgray"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_key"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/register_editview_shape"
                android:hint="@string/register_verificationCode"
                android:maxLength="6"
                android:inputType="number"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:textColor="@color/colorwhite"
                android:textColorHint="@color/colorgray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/get_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="点击获取"
                android:textColor="@color/colorwhite"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9">

                <EditText
                    android:id="@+id/input_sign"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/register_editview_shape"
                    android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:hint="请输入识别码"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:textColor="@color/colorwhite"
                    android:textColorHint="@color/colorgray"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_gravity="bottom"
                    android:background="#ccc" />
            </FrameLayout>

            <com.jierong.share.widget.CaptchaImageView
                android:id="@+id/sign_img"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="6dp"
                android:layout_weight="9"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/sign_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/btn_base_black_10"
                android:gravity="right"
                android:maxLines="2"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="8dp"
                android:paddingTop="4dp"
                android:text="看不清\n换一张"
                android:textColor="@color/colorwhite"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_pw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/register_editview_shape"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:textColor="@color/colorwhite"
                android:textColorHint="@color/colorgray"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/look_mm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_pw_hide" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/input_tjm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/register_editview_shape"
                android:hint="推荐码（选填）"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:textColor="@color/colorwhite"
                android:textColorHint="@color/colorgray"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc"
            android:visibility="gone" />

        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/register_button_shape"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="注\t\t册"
            android:textColor="@color/colorwhite"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/register_account"
                android:textColor="@color/colorwhite"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/go_login_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/register_login"
                android:textColor="@color/colorwhite"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.3dp"
                    android:layout_weight="1"
                    android:background="@color/colorwhite" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/register_fastLogin"
                    android:textColor="@color/colorwhite"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.3dp"
                    android:layout_weight="1"
                    android:background="@color/colorwhite" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/go_login_qq"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/register_qq" />

                <ImageView
                    android:id="@+id/go_login_wb"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/register_wb" />

                <ImageView
                    android:id="@+id/go_login_wx"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/register_wx" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/register_register"
                    android:textColor="@color/colorwhite"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/register_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_agreement"
                    android:textColor="@color/colorwhite"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>